- migrate to Java 17 and apache commons 3, avoid arrays, using optional - remove dyna beans support (focus on DDL)